<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.familymapclient.fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="442dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:id="@+id/serverHostLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/server_host"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="107dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="62dp" />

                <EditText
                    android:id="@+id/serverHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="phone|numberDecimal"
                    android:text="@string/_10_0_2_2"
                    tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_conversion_absoluteWidth="323dp"
                    tools:layout_editor_absoluteX="107dp"
                    tools:layout_editor_absoluteY="48dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/serverPortLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/server_port"
                    tools:layout_conversion_absoluteHeight="56dp"
                    tools:layout_conversion_absoluteWidth="107dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="62dp" />

                <EditText
                    android:id="@+id/serverPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/_8081" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/usernameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/passwordLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/firstnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/firstname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lastnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </TableRow>

            <TableRow>


                <TextView
                    android:id="@+id/genderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:paddingTop="15dp"
                    android:text="@string/gender" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggleGender"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:textOff="@string/male"
                        android:textOn="@string/femaleLogin" />

                </LinearLayout>

            </TableRow>


        </TableLayout>

    </ScrollView>
        <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:enabled="false"
                android:focusable="true"
                android:text="@string/sign_in"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/register" />

        </TableRow>

    </TableLayout>



</LinearLayout>
